--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://your-username.github.io/your-repo-name",
+  "homepage": "https://stay-ghosting.github.io/UI-CW2",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
